2010-10-02  Sam Steingold  <sds@gnu.org>

	* makemake.in: make charstrg.o depend on gllib

2010-09-29  Sam Steingold  <sds@gnu.org>

	do not use gnulib module getdate which should have been called get_date
	<http://article.gmane.org/gmane.comp.lib.gnulib.bugs/23310>
	* modules/syscalls/calls.c (xalloc_die): remove
	(GETDATE): condition on HAVE_GETDATE & HAVE_DECL_GETDATE_ERR
	* modules/syscalls/configure.in: do not call AC_PROG_YACC;
	check for getdate and getdate_err
	* modules/syscalls/gllib/c-ctype.c, modules/syscalls/gllib/c-ctype.h:
	* modules/syscalls/gllib/getdate.h, modules/syscalls/gllib/getdate.y:
	* modules/syscalls/gllib/gettext.h, modules/syscalls/gllib/gettime.c:
	* modules/syscalls/gllib/timespec.h, modules/syscalls/gllib/xalloc.h:
	* modules/syscalls/gllib/xmalloc.c, modules/syscalls/glm4/bison.m4:
	* modules/syscalls/glm4/clock_time.m4, modules/syscalls/glm4/error.m4:
	* modules/syscalls/glm4/getdate.m4, modules/syscalls/glm4/gettime.m4:
	* modules/syscalls/glm4/inline.m4, modules/syscalls/glm4/timespec.m4:
	* modules/syscalls/glm4/xalloc.m4: remove

2010-09-29  Sam Steingold  <sds@gnu.org>

	* configure.in, modules/syscalls/configure.in:
	do not call macros which are already called by gl_INIT

2010-09-29  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (module__syscalls__init_function_2): if
	DATEMSK is not set, point it to the included file ...
	* modules/syscalls/datemsk: add (based on
	http://www.opengroup.org/onlinepubs/009695399/functions/getdate.html)
	* modules/syscalls/Makefile.in (GENERATED): add datemsk
	(datemsk): new target

2010-09-29  Sam Steingold  <sds@gnu.org>

	* makemake.in (lisp${SHREXT}, lisp${LEXE}): put ${GLLIB_A} before
	$(OBJECTS) so that gllib is rebuilt before compiling charstrg.d

2010-09-28  Sam Steingold  <sds@gnu.org>

	implement POSIX:GETDATE using gnulib
	* Makefile.devel (gnulib-imported): import getdate into syscalls
	(build-aux-update): get ylwrap from automake